client/styles.css
body {
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  background-color: #e6e6fa;
  margin: 0;
  padding: 20px;
  color: #333;
}

.container {
  max-width: 800px;
  margin: auto;
  background: #f8f8ff;
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  padding: 20px;
}

.join-section,
.message-box {
  margin-bottom: 20px;
  text-align: center;
}

input[type="text"],
textarea {
  width: 70%;
  max-width: 70%;
  min-width: 70%;
  height: 40px;
  padding: 10px;
  margin: 10px 0;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

button {
  background-color: #957dad;
  color: white;
  padding: 10px 15px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  margin-left: 5px;
}

button:hover {
  background-color: #806a9b;
}

.chat-box {
  border: 1px solid #ccc;
  border-radius: 4px;
  padding: 10px;
  height: 300px;
  overflow-y: auto;
  background-color: #f3f3f7;
}

.message {
  border-bottom: 1px solid #eee;
  padding: 8px 0;
  margin: 8px 0;
}

.own-message {
  background-color: #dcd0ff;
  border-radius: 8px;
  padding: 4px 8px;
  display: inline-block;
  max-width: 80%;
}

.other-message {
  background-color: #e6e0fa;
  border-radius: 8px;
  padding: 4px 8px;
  display: inline-block;
  max-width: 80%;
}

#sendBtn {
  height: 40px;
  width: 120px;
  position: relative;
  bottom: 25px;
}

